  numbers of tabs. This can be used to get aligned tab texts with vertical
  tabs.
- New command `:devtools-focus` (bound to `wIf`) to toggle keyboard focus
  between the devtools and web page.
- New `--target private-window` argument, which can be used to open a private
  window in an existing instance from the commandline.

Fixed
~~~~~

- A URL pattern with a `*.` host was considered valid and matched all hosts.
  Due to keybindings like `tsH` toggling scripts for `*://*.{url:host}/*`,
  invoking them on pages without a host (e.g. `about:blank`) could result in
  accidentally allowing/blocking JavaScript for all pages. Such patterns are
  now considered invalid, with existing patterns being automatically removed
  from `autoconfig.yml`.
- When `scrolling.bar` was set to `overlay` (the default), qutebrowser would
  internally override any `enable-features=...` flags passed via `qt.args` or
  `--qt-flag`. It now correctly combines existing `enable-feature` flags with
  internal ones.
- Elements with an inherited "contenteditable" attribute now trigger insert
  mode and get hints assigned correctly.
- When checkmarks, radio buttons and some other elements are styled via the
  Bootstrap CSS framework, they now get hints correctly.
- When the session file isn't writable when qutebrowser is quit, an error is
  now logged instead of crashing.
- When using `-m` with the `qute-lastpass` userscript, it accidentally matched
  URLs containing the match as substring. This is now fixed.
- When a filename is derived from a page's title, it's now shortened to the
  maximum filename length permitted by the filesystem.
- `:enter-mode register` crashed since v1.13.0, it now displays an error
  instead.
- Crash with certain invalid URLs in resources with the QtWebKit backend.
- When `:config-edit` is used but no `config.py` exists yet, the file is now
  created (and watched for changes properly) before spawning the external
  editor.

v1.13.1 (2020-07-17)
--------------------

Fixed