@@ -59,6 +59,9 @@ Added
   between the devtools and web page.
 - New `--target private-window` argument, which can be used to open a private
   window in an existing instance from the commandline.
+- The `:download-open` command now has a new `--dir` flag which can be used to
+  open the directory containing the downloaded file. An entry to do the same
+  was also added to the context menu.
 
 Fixed
 ~~~~~
